新增css样式管理。需要重写首页操作

--- a/resources/messages_en.properties
+++ b/resources/messages_en.properties
@@ -23,13 +23,19 @@ screen.welcome.welcome=Congratulations on bringing CAS online!  The default auth
 screen.welcome.security=For security reasons, please Log Out and Exit your web browser when you are done accessing services that require authentication!
 screen.welcome.instructions=Enter your Username and Password
 screen.welcome.label.netid=<span class="accesskey">U</span>sername:
+screen.welcome.label.group=group:
 screen.welcome.label.netid.accesskey=u
 screen.welcome.label.password=<span class="accesskey">P</span>assword:
 screen.welcome.label.password.accesskey=p
 screen.welcome.label.warn=<span class="accesskey">W</span>arn me before logging me into other sites.
 screen.welcome.label.warn.accesskey=w
 screen.welcome.button.login=LOGIN
+screen.welcome.button.register=REGISTER
 screen.welcome.button.clear=CLEAR
+
+cas.global.name=\u54C8\u5C14\u6EE8\u4FE1\u606F\u5DE5\u7A0B\u5B66\u9662
+screen.welcome.select.teacher=Teacher
+screen.welcome.select.student=Student
 
 # Blocked Errors Page
 screen.blocked.header=Access Denied
