--- a/resources/messages_zh_CN.properties
+++ b/resources/messages_zh_CN.properties
@@ -23,14 +23,19 @@ screen.welcome.welcome=\u6b22\u8fce\u6765\u5230\u4e2d\u592e\u8ba4\u8bc1\u7cfb\u7
 screen.welcome.security=\u51fa\u4e8e\u5b89\u5168\u8003\u8651\uff0c\u4e00\u65e6\u60a8\u8bbf\u95ee\u8fc7\u90a3\u4e9b\u9700\u8981\u60a8\u63d0\u4f9b\u51ed\u8bc1\u4fe1\u606f\u7684\u5e94\u7528\u65f6\uff0c\u8bf7\u64cd\u4f5c\u5b8c\u6210\u4e4b\u540e\u5173\u95ed\u6d4f\u89c8\u5668\u3002
 screen.welcome.instructions=\u8bf7\u8f93\u5165\u60a8\u7684\u7528\u6237\u540d\u548c\u5bc6\u7801.
 screen.welcome.label.netid=\u7528\u6237\u540d:
+screen.welcome.label.group=\u8BF7\u9009\u62E9\u89D2\u8272:
 screen.welcome.label.netid.accesskey=n
 screen.welcome.label.password=\u5bc6\u3000\u7801:
 screen.welcome.label.password.accesskey=p
 screen.welcome.label.warn=\u8f6c\u5411\u5176\u4ed6\u7ad9\u70b9\u524d\u63d0\u793a\u6211\u3002
 screen.welcome.label.warn.accesskey=w
 screen.welcome.button.login=\u767b\u5f55
+screen.welcome.button.register=\u6CE8\u518C
 screen.welcome.button.clear=\u91cd\u7f6e
 
+cas.global.name=\u54C8\u5C14\u6EE8\u4FE1\u606F\u5DE5\u7A0B\u5B66\u9662
+screen.welcome.select.teacher=\u6559\u5E08
+screen.welcome.select.student=\u5B66\u751F
 # Blocked Errors Page
 screen.blocked.header=\u8bbf\u95ee\u88ab\u62d2\u7edd
 screen.blocked.message=\u8f93\u9519\u5bc6\u7801\u6b21\u6570\u592a\u591a\uff0c\u8d26\u53f7\u88ab\u9501\u5b9a\u3002
